// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserService Create User 1`] = `
Object {
  "enable": true,
  "id": 2,
  "info": "{}",
  "name": "Test",
  "password": "ebdf8cc00bc4d9ceee633c56c63b49955769a92ca060825c9b08e4af61326e2b",
}
`;

exports[`UserService Delete User 1`] = `true`;

exports[`UserService List Users 1`] = `
Array [
  User {
    "enable": true,
    "id": 1,
    "info": "{}",
    "name": "admin",
    "password": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  },
  User {
    "enable": true,
    "id": 3,
    "info": "{}",
    "name": "Test2-2",
    "password": "ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad",
  },
]
`;

exports[`UserService List Users Params 1`] = `
Array [
  User {
    "id": 1,
    "name": "admin",
  },
  User {
    "id": 3,
    "name": "Test2-2",
  },
]
`;

exports[`UserService Update User 1`] = `
User {
  "enable": true,
  "id": 3,
  "info": "{}",
  "name": "Test2-2",
  "password": "ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad",
}
`;

exports[`UserService onModuleInit 1`] = `undefined`;
